--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -35,4 +30,28 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+ul {
+  list-style: none;
+}
+
+div.flex-container {
+  display: flex;
+}
+
+div.left-div {
+  width: 255px;
+  height: 218px;
+}
+
+img.product {
+  margin: auto;
+}
+
+div.right-div {
+  display: flex;
+  flex-direction: column;
+
+  align-items: flex-start;
 }
