--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -3,56 +3,6 @@
   padding: 0;
   font-family: Arial, sans-serif, Helvetica;
   line-height: 1.1em;
-  --little: 12px;
-  --non-little: 14px;
-  --nav-bg: #0f1111;
-}
-
-button {
-  outline: none;
-  border: none;
-  background-color: transparent;
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  width: 100%;
-}
-
-/* ln-text -- little and non-little text */
-.ln-text {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-.little {
-  font-size: var(--little);
-  line-height: 14px;
-  font-weight: 400;
-}
-
-.non-little {
-  font-size: var(--non-little);
-  font-weight: 700;
-  line-height: 15px;
-}
-
-.nav-bar {
-  background-color: var(--nav-bg);
-  padding: 1rem 0;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  color: white;
-}
-
-div.location {
-  display: flex;
-  align-items: flex-end;
-}
-
-div.location-icon {
-  margin-right: 0.2rem;
 }
 
 div.lang {
@@ -62,7 +12,7 @@ div.lang {
 }
 
 span.lang-flag {
-  display: block;
+  display: inline-block;
   width: 24px;
   height: 18px;
   background-size: 142px 295px;
