--- a/src/styles/textNLink.css
+++ b/src/styles/textNLink.css
@@ -1,3 +1,29 @@
+/* font sizes */
+
+.font-std {
+  font-size: 13px;
+  line-height: 1.5em;
+}
+
+.font-std-bd {
+  font-size: 13px;
+  font-weight: 700;
+  line-height: 1.5em;
+}
+
+.font-sm {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1.5em;
+}
+
+.font-xsm {
+  font-size: 11px;
+  line-height: 1.5em;
+}
+
+/* anchor */
+
 a.no-link {
   text-decoration: none;
   color: inherit;
@@ -21,4 +47,13 @@ a.anchor-btn {
 
 a.anchor-btn:hover {
   background-color: #cacaca;
+}
+
+/* navbar.jsx */
+p.font-sm.nav {
+  line-height: 1em;
+}
+
+p.font-std-bd.nav {
+  line-height: 1em;
 }
